8202387: javac --release 11 not supported
Adding historical data for JDK 10; adding ability to produce the historical data incrementally.

Reviewed-by: erikj, forax, jjg